Fix: Correct FormatterUtil.pad() logic
- Handles length <= 0 by returning the original string.
- Correctly truncates strings longer than specified length.
- Defaults to space for null or empty padChar.
- This addresses issues where length 0 caused truncation to empty string.